2012-03-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Header.swg (get_dle): Return undef if not set.
	* server-src/amidxtaped.pl: Check dle is set.

2012-03-08  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Use the write-timestamp, not the
	  dump-timestamp.

2012-03-08  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ssh-security.c: use default port if client-port is not
	  set.

2012-03-07  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl:  Fix use of subdir for restore,
	  prepend subdir on include for restore.

2012-03-07  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmjob_args.c: Add '-o D-agent-fd' argument.

2012-03-07  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Do not execute pg_start_backup and
	  pg_stop_backup on selfcheck.

2012-02-23  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amzfs-sendrecv.8.xml: Typo.

2012-02-23  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/disklist.5.xml: Document includefile directive.

2012-02-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c (disklist_one): print the filename.
	* server-src/diskfile.c: Add includefile directive.
	* server-src/diskfile.h (disk_t): Add filename.

2012-02-14  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Makefile.am: Add '--homeurl "$(POD_HOME_URL)"' to make_html
	* perl/make_html.pl: Improved modules list.

2012-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/make_html.pl: Add link to index page.

2012-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/make_html.pl: More fix.

2012-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/make_html.pl: Make relative link.

2012-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/make_html.pl: Fix for beta release.

2012-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Fix default netusage.
