@@ -448,6 +448,10 @@ writing long enough to bring the average below this value.
  (read-write) Set to yes if it is an openstack storage device.
 </listitem></varlistentry>
  <!-- ==== -->
+ <varlistentry><term>PROXY</term><listitem>
+ (read-write) The proxy hostname or IP in the format "host[:port]".
+</listitem></varlistentry>
+ <!-- ==== -->
  <varlistentry><term>S3_ACCESS_KEY</term><listitem>
  (read-write) This property gives the Amazon S3 access key used to access the service.
 </listitem></varlistentry>
